--- a/devmobile/www/index.html
+++ b/devmobile/www/index.html
@@ -19,25 +19,177 @@
 -->
 <html>
     <head>
+		<!-- meta details
+			WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323
+		-->
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<!-- style sheets -->
+		<link rel="stylesheet" type="text/css" href="js/libs/jquery-mobile/jquery.mobile.min.css" />
+		<!-- not needed so far...
+		<link rel="stylesheet" type="text/css" href="js/libs/jquery-mobile/jquery.mobile.structure.min.css" />
+		<link rel="stylesheet" type="text/css" href="js/libs/jquery-mobile/jquery.mobile.theme.min.css" />
+		-->
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+		<link rel="stylesheet" type="text/css" href="css/calculator.css" />
+		<!-- page title -->
+        <title>My Mobile Application</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+		<!-- page 1 (calculator) -->
+		<div data-role="page" id="page1">
+			<!-- page header -->
+			<div data-theme="b" data-role="header" data-position="fixed">
+				<h3>
+					Calculator
+				</h3>
+			</div>
+			<!-- page content -->
+			<div data-role="content">
+				<div data-role="navbar" data-iconpos="bottom">
+					<ul>
+						<li>
+							<a href="#page1" data-transition="slide" data-theme="" data-icon="bars" class="ui-btn-active ui-state-persist">
+								Calculator
+							</a>
+						</li>
+						<li>
+							<a href="#page2" data-transition="slide" data-theme="" data-icon="bars">
+								Undefined 1
+							</a>
+						</li>
+						<li>
+							<a href="#page3" data-transition="slide" data-theme="" data-icon="bars">
+								Undefined 2
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<!-- calculator application sourced from http://thecodeplayer.com/ -->
+				<div id="calculator">
+					<!-- screen and clear key -->
+					<div class="calc_top">
+						<span class="calc_clear">C</span>
+						<div class="calc_screen"></div>
+					</div>
+					<!-- operators and other keys -->
+					<div class="calc_keys">
+						<span>7</span>
+						<span>8</span>
+						<span>9</span>
+						<span class="calc_operator">+</span>
+						<span>4</span>
+						<span>5</span>
+						<span>6</span>
+						<span class="calc_operator">-</span>
+						<span>1</span>
+						<span>2</span>
+						<span>3</span>
+						<span class="calc_operator">÷</span>
+						<span>0</span>
+						<span>.</span>
+						<span class="calc_eval">=</span>
+						<span class="calc_operator">x</span>
+					</div>
+				</div>
+			</div>
+			<!-- page footer -->
+			<div data-theme="b" data-role="footer" data-position="fixed">
+				<h2>
+					by WC v1.0
+				</h2>
+			</div>
+		</div>
+
+		<!-- page 2 -->
+		<div data-role="page" id="page2">
+			<!-- page header -->
+			<div data-theme="b" data-role="header" data-position="fixed">
+				<h3>
+					Undefined 1
+				</h3>
+			</div>
+			<!-- page content -->
+			<div data-role="content">
+				<div data-role="navbar" data-iconpos="bottom">
+					<ul>
+						<li>
+							<a href="#page1" data-transition="slide" data-theme="" data-icon="bars">
+								Calculator
+							</a>
+						</li>
+						<li>
+							<a href="#page2" data-transition="slide" data-theme="" data-icon="bars" class="ui-btn-active ui-state-persist">
+								Undefined 1
+							</a>
+						</li>
+						<li>
+							<a href="#page3" data-transition="slide" data-theme="" data-icon="bars">
+								Undefined 2
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				page 2
+			</div>
+			<!-- page footer -->
+			<div data-theme="b" data-role="footer" data-position="fixed">
+				<h2>
+					by WC v1.0
+				</h2>
+			</div>
+		</div>
+
+		<!-- page 3 -->
+		<div data-role="page" id="page3">
+			<!-- page header -->
+			<div data-theme="b" data-role="header" data-position="fixed">
+				<h3>
+					Undefined 2
+				</h3>
+			</div>
+			<!-- page content -->
+			<div data-role="content">
+				<div data-role="navbar" data-iconpos="bottom">
+					<ul>
+						<li>
+							<a href="#page1" data-transition="slide" data-theme="" data-icon="bars">
+								Calculator
+							</a>
+						</li>
+						<li>
+							<a href="#page2" data-transition="slide" data-theme="" data-icon="bars">
+								Undefined 1
+							</a>
+						</li>
+						<li>
+							<a href="#page3" data-transition="slide" data-theme="" data-icon="bars" class="ui-btn-active ui-state-persist">
+								Undefined 2
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				page 3
+			</div>
+			<!-- page footer -->
+			<div data-theme="b" data-role="footer" data-position="fixed">
+				<h2>
+					by WC v1.0
+				</h2>
+			</div>
+		</div>
+
+		<!-- javascript init -->
+		<script type="text/javascript" src="js/libs/jquery/jquery.min.js"></script>
+		<script type="text/javascript" src="js/libs/jquery-mobile/jquery.mobile.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
+		<script type="text/javascript" src="js/calculator.js"></script>
     </body>
 </html>
