Increased the calculator by 40% width and height. It was a bit to small on the phone once packed to apk. Also added a second page with a Android active logo to test some CSS animations.

--- a/devmobile/www/index.html
+++ b/devmobile/www/index.html
@@ -35,6 +35,7 @@
 		-->
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/calculator.css" />
+		<link rel="stylesheet" type="text/css" href="css/android.css" />
 		<!-- page title -->
         <title>My Mobile Application</title>
     </head>
@@ -58,7 +59,7 @@
 						</li>
 						<li>
 							<a href="#page2" data-transition="slide" data-theme="" data-icon="bars">
-								Undefined 1
+								Android Logo
 							</a>
 						</li>
 						<li>
@@ -105,7 +106,7 @@
 			</div>
 		</div>
 
-		<!-- page 2 -->
+		<!-- page 2 android logo -->
 		<div data-role="page" id="page2">
 			<!-- page header -->
 			<div data-theme="b" data-role="header" data-position="fixed">
@@ -124,7 +125,7 @@
 						</li>
 						<li>
 							<a href="#page2" data-transition="slide" data-theme="" data-icon="bars" class="ui-btn-active ui-state-persist">
-								Undefined 1
+								Android Logo
 							</a>
 						</li>
 						<li>
@@ -135,7 +136,21 @@
 					</ul>
 				</div>
 
-				page 2
+				<!-- android active logo sourced from http://thecodeplayer.com/ -->
+				<div class="android">
+					<div class="android_head">
+						<div class="android_l_ant"></div>
+						<div class="android_r_ant"></div>
+						<div class="android_l_eye"></div>
+						<div class="android_r_eye"></div>
+					</div>
+					<div class="android_body">
+						<div class="android_l_arm"></div>
+						<div class="android_r_arm"></div>
+						<div class="android_l_leg"></div>
+						<div class="android_r_leg"></div>
+					</div>
+				</div>
 			</div>
 			<!-- page footer -->
 			<div data-theme="b" data-role="footer" data-position="fixed">
@@ -164,7 +179,7 @@
 						</li>
 						<li>
 							<a href="#page2" data-transition="slide" data-theme="" data-icon="bars">
-								Undefined 1
+								Android Logo
 							</a>
 						</li>
 						<li>
